--- a/style.css
+++ b/style.css
@@ -1,84 +1,93 @@
-.custom-header-background,.custom-footer-background{
-    background-color: #086d6b;
+.custom-header-background,
+.custom-footer-background {
+  background-color: #086d6b;
 }
 
 .highlight-text {
-    position: relative;
-  }
-  
-  .highlight-text::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(8, 109, 107, 0.8); /* Adjust the background color and transparency as needed */
-    z-index: -1;
-    box-shadow: 0 0 10px rgba(8, 109, 107, 0.8); /* Adjust the box shadow color and spread radius as needed */
-  }
-  
-  .highlight-text a {
-    position: relative;
-    color: transparent;
-    -webkit-text-stroke: 2px #FFFFFF; /* Adjust the stroke color and thickness as needed */
-  }
-  
-  
-  
+  position: relative;
+}
+
+.highlight-text::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(8, 109, 107, 0.8);
+  /* Adjust the background color and transparency as needed */
+  z-index: -1;
+  box-shadow: 0 0 10px rgba(8, 109, 107, 0.8);
+  /* Adjust the box shadow color and spread radius as needed */
+}
+
+.highlight-text a {
+  position: relative;
+  color: transparent;
+  -webkit-text-stroke: 2px #FFFFFF;
+  /* Adjust the stroke color and thickness as needed */
+}
+
+
+
 
 .custom-text-about-me {
-    font-family: Consolas;
-    font-size: 1.00rem; 
-    line-height: 1.4;
-    color: #044f4e;
-    text-align: justify;
-    margin: 0;
-    overflow: hidden;
-    animation: typing 4s steps(40) infinite;
+  font-family: Consolas;
+  font-size: 1.00rem;
+  line-height: 1.4;
+  color: #044f4e;
+  text-align: justify;
+  margin: 0;
+  overflow: hidden;
+  animation: typing 4s steps(40) infinite;
 
 }
 
-.home-section-background{
-    padding-top: 7rem;
-    background-image: url('images/home-background-image.jpg');
-    background-size: cover;
-    background-position: center;
-  }
-  
-.safvan-profile-image{
-    border-radius: 50%;
-    border: 0.3em solid #343a40; /* Replace with your desired border color */
-    width: 13rem;
+.home-section-background {
+  padding-top: 7rem;
+  background-image: url('images/home-background-image.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
-.services-skills-experiences{
-    padding-top: 7rem;
-    background-image: url('images/backgorod-coverr-image.jpg');
-    background-size: cover;
-    background-position: center;
+.safvan-profile-image {
+  border-radius: 50%;
+  border: 0.3em solid #343a40;
+  /* Replace with your desired border color */
+  width: 13rem;
+}
+
+.services-skills-experiences {
+  padding-top: 7rem;
+  background-image: url('images/backgorod-coverr-image.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 
-  .social-icons {
-    margin-bottom: 20px;
-  }
-  
-  .social-icon {
-    display: inline-block;
-    color: #ffffff; /* Replace with your desired icon color */
-    font-size: 24px; /* Adjust the icon size as needed */
-    margin-right: 10px;
-    transition: color 0.3s ease;
-  }
-  
-  .social-icon:hover {
-    color: #ffffff; /* Replace with your desired hover color */
-  }
-  
-  .footer-copyright-text {
-    color: #ffffff; /* Replace with your desired text color */
-    font-weight: 300;
-    font-size: 1.2em; /* Adjust the text size as needed */
-  }
-  
+.social-icons {
+  margin-bottom: 20px;
+}
+
+.social-icon {
+  display: inline-block;
+  color: #ffffff;
+  /* Replace with your desired icon color */
+  font-size: 24px;
+  /* Adjust the icon size as needed */
+  margin-right: 10px;
+  transition: color 0.3s ease;
+}
+
+.social-icon:hover {
+  color: #ffffff;
+  /* Replace with your desired hover color */
+}
+
+.footer-copyright-text {
+  color: #ffffff;
+  /* Replace with your desired text color */
+  font-weight: 300;
+  font-size: 1.2em;
+  /* Adjust the text size as needed */
+}
